--- a/assets/index.css
+++ b/assets/index.css
@@ -35,6 +35,59 @@ p {
   outline-color: var(--purple);
 }
 
+/* ========= SCROLL ANIMATIONS ========== */
+/* This should be before other styles, to */
+/* avoid these styles overriding others.  */
+/* Remeber to use class .animated-item!   */
+
+.pre-anim {
+  transition: none !important;
+}
+
+.fade-in.pre-anim {
+  opacity: 0;
+}
+
+.fade-in:not(.pre-anim) {
+  opacity: 0;
+  animation: fade-in 0.75s ease forwards;
+  animation-delay: calc(var(--delay, 0) * 1ms);
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.pop-in.pre-anim {
+  opacity: 0;
+}
+
+.pop-in:not(.pre-anim) {
+  opacity: 0;
+  animation: pop-in 0.75s cubic-bezier(0.175, 0.885, 0.35, 1.275) forwards;
+  animation-delay: calc(var(--delay, 0) * 1ms);
+}
+
+@keyframes pop-in {
+  from {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+/* END ANIMATIONS */
+/* ============== */
+
 .main-content {
   display: flex;
   flex-direction: column;
@@ -44,10 +97,36 @@ p {
   padding: 0 5%;
 }
 
+.hover-tooltip {
+  position: relative;
+}
+
+.command-snippet::after,
+.hover-tooltip::after {
+  position: absolute;
+  content: var(--content);
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -125%) scale(0.75);
+  background-color: var(--bg-color, #c9c9c911);
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 0.5em;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.1s ease, transform 0.1s ease;
+  white-space: nowrap;
+}
+
+.hover-tooltip:hover::after {
+  transform: translate(-50%, -150%);
+  opacity: 1;
+}
+
 .command-snippet {
   position: relative;
-  --snippet-bg: rgba(75, 75, 75, 0.5);
-  background-color: var(--snippet-bg);
+  --bg-color: rgba(75, 75, 75, 0.5);
+  background-color: var(--bg-color);
   border-radius: 0.25em;
   padding: 0 0.25em;
   color: rgb(221, 221, 221);
@@ -60,18 +139,7 @@ p {
 }
 
 .command-snippet::after {
-  position: absolute;
   content: "Copied! 📋";
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -125%) scale(0.75);
-  background-color: var(--snippet-bg);
-  font-size: 0.75em;
-  padding: 0.25em 0.5em;
-  border-radius: 0.5em;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.1s ease, transform 0.1s ease;
 }
 
 .active.command-snippet::after {
@@ -79,6 +147,8 @@ p {
   opacity: 1;
 }
 
+/* ========== */
+/* MAGIC TEXT */
 .magic-text {
   position: relative;
   animation: background-pan 3s linear infinite;
@@ -97,6 +167,7 @@ p {
 .magic-text>.magic-star {
   animation: scale-and-rotate 1000ms linear forwards;
   position: absolute;
+  pointer-events: none;
   --size: 0.5em;
   /* --size: clamp(15px, 1vw, 30px); */
 
@@ -139,6 +210,11 @@ p {
   }
 }
 
+/* END MAGIC TEXT */
+/* ============== */
+
+/* ====== */
+/* FOOTER */
 #footer {
   position: relative;
   margin: 75px 0;
@@ -150,7 +226,7 @@ p {
   left: 30%;
   right: 30%;
   height: 1px;
-  background-color: #eee
+  background-color: #ccc
 }
 
 #footer-links {
@@ -164,7 +240,7 @@ p {
   color: #eee;
   transition: background-color 0.2s ease;
   font-size: 12px;
-  margin: 2em min(2em, 3.5vw);
+  margin: 3em min(2em, 3.5vw);
   padding: 0.25em 0.5em;
   border-radius: 0.5em;
 
@@ -181,6 +257,20 @@ p {
 
 .tiny-logo {
   margin-right: 0.5rem;
+}
+
+/* END FOOTER */
+/* ========== */
+
+#star-canvas {
+  pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* ===== BEGIN SCREEN SIZE SPECIFIC STYLES ===== */
