--- a/assets/index.css
+++ b/assets/index.css
@@ -216,24 +216,17 @@ p {
 /* ====== */
 /* FOOTER */
 #footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: relative;
   margin: 75px 0;
 }
 
-.divider {
-  position: absolute;
-  top: 0;
-  left: 30%;
-  right: 30%;
-  height: 1px;
-  background-color: #ccc
-}
-
 #footer-links {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  border-top: 1px solid #eeeeee33;
 }
 
 .footer-link {
